# internal/delivery/http/v1/dto/category_dto.go
@@ -13,22 +13,36 @@ type CategoryResponse struct {
 
 // CreateCategoryInput - ข้อมูลนำเข้าสำหรับสร้างหมวดหมู่ (Request Body)
 type CreateCategoryInput struct {
-	Name string `json:"name" validate:"required,min=2,max=50" example:"อาหาร"`
-	Type string `json:"type" validate:"required,oneof=income expense" example:"expense"`
+	Name     string  `json:"name" validate:"required,min=2,max=50" example:"อาหาร"`
+	Type     string  `json:"type" validate:"required,oneof=income expense" example:"expense"`
+	IconKey  *string `json:"icon_key" example:"food"`
+	ColorHex *string `json:"color_hex" example:"#FF0000"`
 }
 
 // UpdateCategoryInput - ข้อมูลนำเข้าสำหรับอัปเดตหมวดหมู่ (Request Body)
 type UpdateCategoryInput struct {
-	Name *string `json:"name" validate:"omitempty,min=3,max=50" example:"อาหาร"`
-	Type *string `json:"type" validate:"omitempty,oneof=income expense" example:"expense"`
+	Name     *string `json:"name" validate:"omitempty,min=3,max=50" example:"อาหาร"`
+	Type     *string `json:"type" validate:"omitempty,oneof=income expense" example:"expense"`
+	IconKey  *string `json:"icon_key" example:"food"`
+	ColorHex *string `json:"color_hex" example:"#FF0000"`
 }
 
 // ToDomainCreateParam แปลงข้อมูลจาก DTO เป็น Domain Param
 func (c *CreateCategoryInput) ToDomainCreateParam() domain.CreateCategoryParam {
-	return domain.CreateCategoryParam{
+	param := domain.CreateCategoryParam{
 		Name: c.Name,
 		Type: c.Type,
 	}
+
+	if c.IconKey != nil {
+		param.IconKey = *c.IconKey
+	}
+
+	if c.ColorHex != nil {
+		param.ColorHex = *c.ColorHex
+	}
+
+	return param
 }
 
 // ToDomainUpdateParam แปลงข้อมูลจาก DTO เป็น Domain Param
@@ -41,6 +55,14 @@ func (u *UpdateCategoryInput) ToDomainUpdateParam() domain.UpdateCategoryParam {
 
 	if u.Type != nil {
 		param.Type = *u.Type
+	}
+
+	if u.IconKey != nil {
+		param.IconKey = *u.IconKey
+	}
+
+	if u.ColorHex != nil {
+		param.ColorHex = *u.ColorHex
 	}
 
 	return param
